# Telegram_Channel_Analytics_Bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
utils/: basic_structure.py  bot_tg.py
